correct margin collapsables

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -37,7 +37,6 @@ $font-open: "Open Sans", sans-serif;
   font-weight: 600;
   color: $gunmetal;
   text-transform: uppercase;
-  padding: 10px 0;
 }
 
 @mixin form_label {
